# basket-manager

./: .gcloudignore  .gitignore  README.md  app.yaml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  workflow.plantuml
basket_manager/: __init__.py  app.py  models.py  schemas.py
basket_manager/tests/: conftest.py  test_app.py
dialogflow/: agent.json
dialogflow/entities/: SIM.json  SIM_entries_en.json  broadband.json  broadband_entries_en.json  mobile.json  mobile_entries_en.json
dialogflow/intents/: Default Fallback Intent.json  Default Welcome Intent.json  Default Welcome Intent_usersays_en.json  add broadband.json  add broadband_usersays_en.json  add mobile.json  add mobile_usersays_en.json  add sim.json  add sim_usersays_en.json  get basket.json  pay.json  pay_usersays_en.json  start basket.json  start basket_usersays_en.json
middleware/: main.js  package-lock.json  package.json
