[metadata]
name = basket-manager
summary = Technical test
description-file = README.md
author = Vincent Francoise
author-email = vincefra974@gmail.com
home-page = https://github.com/v-francoise
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    basket_manager

[entry_points]
console_scripts =
    basket-manager = basket_manager.app:main

[aliases]
test=pytest
